src/test/deca/context/invalid/operation-binaire-equals-wrong-class.deca
// Description:
//    Test 3.33 fail avec equals avec une string et un objet d'une classe
//
// Resultats:
//    Ligne 16 : Equals ne s'utilise qu'avec des int, des float, des booléens ou des classes.
//
// Historique:
//    cree le 06/01/2023

class A{

}

{
    A a;
    a == "hello world";
}